--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
         text: Lectures
       - href: exercises/index.qmd
         text: Exercises
+      - href: resources.qmd
+        text: Links and Resources
 
 format:
   html:
