fix link to data

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,8 @@
 project:
   type: website
   output-dir: docs
+  resources: 
+    - lpr-ex.rds
 
 website:
   title: "Programming and statistical modelling in R"
